# web-error-detector

./: .env  .env.example  .gitignore  .pylintrc  README.md  crawl.py  erreurs_5xx.csv  errors.csv  pyproject.toml  requirements.txt  site_errors.json
src/: main.py
src/config/: settings.py
src/console/: error_catcher.py
src/crawler/: crawler.py  resource_checker.py
src/scripts/: run.py
src/utils/: logger.py  selenium_utils.py  url_utils.py
