[project]
name = "web-error-detector"
version = "2.0.0"
description = "Outil de détection d'erreurs web (pages, ressources, console)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "webdriver-manager>=4.0.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
web-error-detector = "src.scripts.run:main"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88